--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ server: true
 server_port: 4000
 markdown: rdiscount
 pygments: true
+author: linguofeng@msn.com
+description: java,android,linux,ubuntu
