--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ server: true
 server_port: 4000
 markdown: rdiscount
 pygments: true
+title: 林国锋个人博客
 author: linguofeng@msn.com
 description: java,android,linux,ubuntu
