--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ markdown: rdiscount
 pygments: true
 title: 林国锋个人博客
 author: linguofeng@msn.com
-description: java,android,linux,ubuntu,osx,cocos2d-x,c++,c,cpp
+description: java,android,linux,ubuntu,osx,cocos2d-x,c++,c,cpp,hhkb,lua,vim,raspberrypi
