--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 url: https://blog.linguofeng.com
 enforce_ssl: blog.linguofeng.com
-safe: true
-lsi: false
-highlighter: pygments
-markdown: kramdown
 title: 林国锋个人博客
 author: linguofeng@msn.com
 description: java,android,linux,ubuntu,osx,cocos2d-x,c++,c,cpp,hhkb,lua,vim,raspberrypi
 
+markdown: kramdown
 kramdown:
   input:         GFM
-  auto_ids:      true
-  auto_id_prefix: 'id-'
+
+highlighter: rouge
