--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
-url: https://blog.linguofeng.com
-enforce_ssl: blog.linguofeng.com
-title: 林国锋个人博客
-author: linguofeng@msn.com
-description: java,android,linux,ubuntu,osx,cocos2d-x,c++,c,cpp,hhkb,lua,vim,raspberrypi
+url: "https://blog.linguofeng.com"
+enforce_ssl: "blog.linguofeng.com"
+title: "林国锋个人博客"
+author: "linguofeng@msn.com"
+highlighter: "pygments"
+description: "java,android,linux,ubuntu,osx,cocos2d-x,c++,c,cpp,hhkb,lua,vim,raspberrypi"
 
 markdown: kramdown
 kramdown:
-  input:         GFM
-
-highlighter: pygments
+  input: GFM
