--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: "https://blog.linguofeng.com"
 enforce_ssl: "blog.linguofeng.com"
 title: "林国锋个人博客"
 author: "linguofeng@msn.com"
-highlighter: "pygments"
+highlighter: "rouge"
 description: "java,android,linux,ubuntu,osx,cocos2d-x,c++,c,cpp,hhkb,lua,vim,raspberrypi"
 
 markdown: kramdown
